k8s/argocd-ssl-fix/argocd-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
            - containerPort: 8083
              name: metrics
              protocol: TCP
          volumeMounts:
            - name: argocd-tls
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: argocd-tls
          secret:
            secretName: argocd-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
