k8s/argocd-ssl-fix/argocd-server-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ports:
    - name: server
      port: 443
      protocol: TCP
      targetPort: 8080
    - name: grpc
      port: 443
      protocol: TCP
      targetPort: 8080
